--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -66,7 +66,7 @@ jobs:
         packs: +advanced-security/autosar-cpp-coding-standards-uncertified
 
     - name: Build
-      run: make
+      run: pip install -e .[dev] && python setup.py install
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
