--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -66,7 +66,7 @@ jobs:
         packs: +advanced-security/autosar-cpp-coding-standards-uncertified
 
     - name: Build
-      run: cd drivers/linux && apt-get install dkms gcc linux-headers-$(uname -r) make sudo && make all
+      run: cd drivers/linux && apt-get install dkms gcc linux-headers-$(uname -r) && make all
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
